--- a/src/main/webapp/WEB-INF/views/delete.html
+++ b/src/main/webapp/WEB-INF/views/delete.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="/layout :: head">
+    <title>DeleteBook</title>
 </head>
 <body>
-
+<h3>Remove Book</h3>
+<p>
+    <a th:href="@{/books}">
+        Back to book list
+    </a>
+</p>
+<div id="form">
+    <form action="#" th:action="@{/books/delete}" th:object="${books}"
+          method="POST" novalidate="novalidate">
+        <input type="hidden" th:field="*{id}"/>
+        <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" th:field="*{name}"/>
+        </div>
+        <div>
+            <label for="author">Author</label>
+            <input type="email" id="author" th:field="*{author}"/>
+        </div>
+        <div>
+            <label for="price">Price</label>
+            <input type="text" id="price" th:field="*{price}"/>
+        </div>
+        <div>
+            <label >Img</label>
+            <img th:src="@{'/img/' + ${books.getImg()}}" width="100" alt="img">
+        </div>
+        <input type="submit" value="Remove"/>
+    </form>
+</div>
+<footer th:replace="/layout :: footer"></footer>
 </body>
 </html>
